# taiko-bot

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  bot.py  bot_core.py  bot_gateway.py  bot_pool_metrics.py  pyproject.toml  taiko_data_api.py  taiko_runtime_init.py  web.conf
feature_handler/: __init__.py  bot_group_whitelist.py  feature_handler.py  feature_switch_handler.py
onebot_runtime/: __init__.py  adapter.py  gateway.py
plugins/: __init__.py  config.py  taiko.py
plugins/utils/: __init__.py  arcade_map.py  b30_render.py  b30_single.py  const_query.py  dani_progress.py  dojo_score.py  draw_dress.py  draw_summary.py  drawinfo.py  merged_bind.py  progress_catalog.py  progress_star.py  public_score_token.py  score_calculator.py  score_line.py  snapshot_history.py  song_position.py  song_visibility.py  taiko_db.py  tcloud.py  twso.py  update_user.py  userdata_storage.py
plugins/utils/hiroba/: __init__.py  client.py  cooldown.py  credentials.py  normalize.py  parser.py  sync.py
scripts/: build_open_resource_archives.sh  clear_nb_inherited_proxy_env.sh  start_local_data_api.sh  start_taiko_gateway_core.sh
taiko_bot/: __init__.py  local_api.py  public_data.py  settings.py  sqlite_db.py  storage.py  userdata_provider.py  viewer_client.py
taiko_runtime/: __init__.py  platform_adapter.py  qq_markdown_media.py  startup_migration.py
tests/: test_public_data.py  test_score_calculator.py  test_song_visibility.py  test_taiko_parity.py  test_viewer_access.py
