[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taiko-bot"
version = "0.1.0"
description = "Open-source Taiko no Tatsujin NoneBot service"
readme = "README.md"
requires-python = ">=3.8, <4.0"
license = "GPL-2.0-only"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "cryptography>=44.0.0",
    "fastapi>=0.115.0",
    "fuzzywuzzy>=0.18.0",
    "httpx>=0.27.0",
    "matplotlib>=3.8.0",
    "nb-cli>=1.4.2",
    "nonebot-adapter-onebot>=2.4.0",
    "nonebot-adapter-qq>=1.6.0",
    "nonebot2>=2.4.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "Pillow>=10.4.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "requests>=2.32.0",
    "ujson>=5.10.0",
    "uvicorn>=0.30.0",
    "websockets>=12.0",
    "wordcloud>=1.9.0",
]

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
    { name = "QQ", module_name = "nonebot.adapters.qq" }
]
plugins = ["feature_handler", "taiko_runtime_init", "bot_pool_metrics"]
plugin_dirs = ["plugins"]
builtin_plugins = []

[tool.setuptools.packages.find]
include = ["feature_handler*", "onebot_runtime*", "plugins*", "taiko_bot*", "taiko_runtime*"]

[tool.setuptools]
py-modules = ["bot", "bot_core", "bot_gateway", "bot_pool_metrics", "taiko_data_api", "taiko_runtime_init"]
